--- a/www/styles/select2.css
+++ b/www/styles/select2.css
@@ -14,7 +14,7 @@ https://github.com/select2/select2/issues/3278#issuecomment-258481272 : */
     box-sizing: border-box;
     cursor: pointer;
     display: block;
-    height: 28px;
+    /*height: 28px;*/
     user-select: none;
     -webkit-user-select: none; }
     .select2-container .select2-selection--single .select2-selection__rendered {
@@ -146,11 +146,12 @@ https://github.com/select2/select2/issues/3278#issuecomment-258481272 : */
   white-space: nowrap !important; }
 
 .select2-container--default .select2-selection--single {
-  background-color: #fff;
+  background-color: #474747; /* modifié */
+  /*background-color: #fff;*/
   border: 1px solid #aaa;
   border-radius: 4px; }
   .select2-container--default .select2-selection--single .select2-selection__rendered {
-    color: #444;
+    /*color: #444;*/
     line-height: 28px; }
   .select2-container--default .select2-selection--single .select2-selection__clear {
     cursor: pointer;
