--- a/www/styles/css-common.css
+++ b/www/styles/css-common.css
@@ -77,7 +77,7 @@ body {
     width: 30px;
     height: 30px;
     position: relative;
-    border: 4px solid #Fff;
+    border: 4px solid #fff;
     animation: loader 2s infinite ease;
   }
 
