--- a/www/styles/main.css
+++ b/www/styles/main.css
@@ -5,8 +5,8 @@
 /* Codes couleurs  
 
 // boutons //
-    boutons bleu :              #006699
-    boutons bleu (hover) :      #0272aa
+    boutons bleu :              #263859
+    boutons bleu (hover) :      #2b426e
 
     boutons vert :              #4CAF50 
     boutons vert (hover) :      #3e8e41 
@@ -28,7 +28,6 @@ body {
     animation-iteration-count: 1; 
     animation-fill-mode: forwards;
     min-height: 100%;
-    /*font-family: 'Montserrat', sans-serif;*/
     font-family: 'Roboto', sans-serif;
     margin: 0px;
     padding: 0px;
@@ -36,11 +35,11 @@ body {
     color: whitesmoke; /* couleur par défaut */
     overflow-x: hidden;
 
-   /*-webkit-transform: translateZ(0);
+   -webkit-transform: translateZ(0);
    -moz-transform: translateZ(0);
    -ms-transform: translateZ(0);
    -o-transform: translateZ(0);
-   transform: translateZ(0);*/
+   transform: translateZ(0);
 }
 
 @keyframes fadeInAnimation { 
@@ -141,8 +140,11 @@ hr {
 .greentext { color: #4CAF50; }
 .redtext { color: #d9534f; }
 .yellowtext { color: #f0ad4e; }
+.graytext { color : gray; }
 .center { text-align: center; }
 .baseline { vertical-align: baseline; }
+.lowopacity { opacity: 0.33; }
+.verylowopacity { opacity: 0.08; }
 
 /* Classes génériques permettant de créer des div ou autres block avec un fond défini et des bords arrondis */
 .background-gray {
@@ -205,7 +207,7 @@ nav {
     font-size: 18px;
 }
 .menu > li span.underline {
-    border-bottom: 2px solid #006699;
+    border-bottom: 2px solid #263859;
     padding-bottom: 21px;
 }
 .sub-menu {
@@ -325,7 +327,7 @@ section.left, section.right, section.center, section.missing-param-alert, #newRe
       0px 1px 1px 0px rgba(0, 0, 0, 0.5) inset,
       0px 2px 2px 0px rgba(255, 255, 255, 0.2);
     background-color:#2b2b2b;
-    overflow: hidden;
+    /*overflow: hidden; Désactivé car empêche le bon fonctionnement de "position: sticky" sur run.php */
 }
 /* Paramètres supplémentaires pour les class ci-dessus */
 section.center { width: 99%; margin: auto; }
@@ -459,7 +461,7 @@ table.list-repos tr .rl-desc {
 }
 
 .rl-white-bckg span {
-    background-color: #f7f7f7;
+    background-color: lightgray;
     color: black;
 }
 
@@ -493,7 +495,7 @@ td.td-greenbackground span {
 }
 
 td.td-bluebackground span {
-    background-color: #006699;
+    background-color: #263859;
     color: whitesmoke;
 }
 
@@ -514,7 +516,7 @@ td.td-redbackground span:hover {
 
 td.td-bluebackground span:hover {
     transition-duration: 0.4s;
-    background-color: #0272aa;
+    background-color: #2b426e;
 }
 
 .hide, .tr-hide, .td-hide {
@@ -636,7 +638,7 @@ input[type=text].input-large, .select-large, input[type=color].color-large { wid
 }
 /* Tous les boutons bleus */
 .button-submit-large-blue, .button-submit-medium-blue, .button-submit-small-blue, .button-submit-xsmall-blue, .button-submit-xxsmall-blue {
-    background-color: #006699;
+    background-color: #263859;
 }
 /* Tous les boutons verts */
 .button-submit-large-green, .button-submit-medium-green, .button-submit-small-green, .button-submit-xsmall-green, .button-submit-xxsmall-green {
@@ -671,7 +673,8 @@ input[type=text].input-large, .select-large, input[type=color].color-large { wid
 /* Tous les boutons bleus :hover */
 .button-submit-large-blue:hover, .button-submit-medium-blue:hover, .button-submit-small-blue:hover, .button-submit-xsmall-blue:hover, .button-submit-xxsmall-blue:hover {
     transition-duration: 0.4s;
-    background-color: #0272aa;
+    /*background-color: #2b426e;*/
+    background-color: #2b426e;
 }
 /* Tous les boutons verts :hover */
 .button-submit-large-green:hover, .button-submit-medium-green:hover, .button-submit-small-green:hover, .button-submit-xsmall-green:hover, .button-submit-xxsmall-green:hover {
@@ -703,10 +706,9 @@ input[type=text].invisibleInput-green {
 }
 
 input[type=text].invisibleInput-blue {
-    background-color: #006699;
+    background-color: #263859;
     width: 100%;
 }
-
 
 /* boutons switch-field */
 .switch-field {
@@ -743,7 +745,7 @@ input[type=text].invisibleInput-blue {
 }
 
 .switch-field input:checked + label {
-    background-color: #006699;
+    background-color: #263859;
 	box-shadow: none;
     color: whitesmoke;
 }
@@ -789,6 +791,7 @@ input[type=text].invisibleInput-blue {
     -webkit-transition: .4s;
     transition: .4s;
     border-radius: 34px;
+    border: 1px solid darkslategray;
 }
 
 .onoff-switch-slider:before {
@@ -805,11 +808,11 @@ input[type=text].invisibleInput-blue {
 }
   
 .onoff-switch-input:checked + .onoff-switch-slider {
-    background-color: #006699;
+    background-color: #263859;
 }
 
 .onoff-switch-input:focus + .onoff-switch-slider {
-    box-shadow: 0 0 1px #006699;
+    box-shadow: 0 0 1px #263859;
 }
 
 .onoff-switch-input:checked + .onoff-switch-slider:before {
@@ -819,13 +822,13 @@ input[type=text].invisibleInput-blue {
 }
 
 .env, .last-env {
-    font-size: 11px;
-    padding-left: 5px;
-    padding-right: 5px;
-    padding-top: 4px;
-    padding-bottom: 4px;
+    font-size: 12px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 3px;
+    padding-bottom: 3px;
     vertical-align: middle;
-    border-radius: 3px;
+    border-radius: 2px;
     box-shadow:
     0px 1px 1px 0px rgba(0, 0, 0, 0.5) inset,
     0px 2px 2px 0px rgba(109, 109, 109, 0.2);
@@ -891,12 +894,12 @@ footer p { color: gray; }
     padding-top: 5px;
     padding-bottom: 5px;
     padding-left: 7px;
-    background-color:#006699;
+    background-color:#263859;
     border-radius: 5px;
 }
 
 #newRepoSlideButton:hover {
-    background-color: #0272aa;
+    background-color: #2b426e;
 }
 
 #ReposListDisplayToggleButton:hover, #ReposSourcesSlideUpButton:hover, #GroupsListSlideUpButton:hover {
@@ -910,13 +913,13 @@ footer p { color: gray; }
     border-radius: 5px;
 }
 
-.alert, .deleteAlert { /* div affichant une alerte au milieu de la page */
+/*.alert, .deleteAlert {
     width: 100%;
     max-width: 600px;
     padding-top: 20px;
     padding-bottom: 20px;
     border-radius: 5px;
-    position: fixed; /* on positionne le div au centre de la page */
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -928,8 +931,26 @@ footer p { color: gray; }
     font-size: 14px;
     text-align: center;
     vertical-align: middle;
-}
+}*/
 
+.alert, .deleteAlert { /* div affichant une alerte au milieu de la page */
+    width: 600px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border-radius: 5px;
+    position: fixed; /* on positionne le div au centre de la page */
+    top: 400px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    box-shadow:
+     0px 1px 1px 0px rgba(0, 0, 0, 0.5) inset,
+     0px 2px 2px 0px rgba(109, 109, 109, 0.2);
+    background-color:#252525;
+    color: whitesmoke;
+    font-size: 14px;
+    text-align: center;
+    vertical-align: middle;
+}
 .deleteAlert a, .deleteAlert span {
     margin-left: 5px;
     margin-right: 5px;
@@ -937,11 +958,9 @@ footer p { color: gray; }
     border-radius: 4px;
     border: 1px solid black;
 }
-
 .deleteButton {
     background-color: #d9534f;
 }
-
 .deleteButton:hover {
     background-color: #b14440;
 }
@@ -963,60 +982,12 @@ footer p { color: gray; }
     padding-bottom: 2px;
 }
 
-#log {
-    font-size: 14px;
-    padding: 10px;
-    position: relative;
-    max-width: 100% !important;
-}
-
-#log pre { /* empecher le contenu des <pre> de dépasser */
-    white-space: pre-wrap;       /* css-3 */
-    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
-    white-space: -pre-wrap;      /* Opera 4-6 */
-    white-space: -o-pre-wrap;    /* Opera 7 */
-    word-wrap: break-word;       /* Internet Explorer 5.5+ */
-}
-
-/* Boutons Top et Down pour atteindre le haut ou le bas de page */
-#scrollButtons-container {
-    position: absolute;
-    right: 0;
-    top: 0;
-    width: 45px;
-    height: 100%; /* le container fait la hauteur du contenu du fichier de log, afin que les boutons scrolls puissent aller jusqu'en bas */
-}
-/* Les boutons scroll sont fixes à l'intérieur du container */
-#scrollButtons {
-    position: fixed;
-}
-
-.button-top-down {
-    display: block;
-    margin-right: 0;
-    align-self: right;
-    margin: 5px;
-    opacity: 0.50;
-    border-radius: 5px;
-    background-color: #555555;
-}
-
-.button-top-down img {
-    display: block;
-    padding: 8px;
-    margin: auto;
-}
-
-.button-top-down:hover {
-    opacity: 1;
-}
-
 .profileDiv {
     border-radius: 2px;
     width: 49.3%;
     margin: 4px;
     display: inline;
-    background-color: #4CAF50;
+    background-color: #263859;
     float: left;
 }
 
@@ -1063,7 +1034,7 @@ footer p { color: gray; }
 ::-webkit-scrollbar-thumb {
     background: #596EB5;
     border-radius: 5px;
-    /*border: 1px solid #006699;*/
+    /*border: 1px solid #263859;*/
 }
 
 /* divs avec rubans de couleurs */
@@ -1081,7 +1052,7 @@ footer p { color: gray; }
 }
 .header-green { background-color: #4CAF50; }
 .header-red   { background-color: #d9534f; }
-.header-blue  { background-color: #006699 }
+.header-blue  { background-color: #263859 }
 .header-white { background-color: whitesmoke; }
 .header-white td { color: black; }
 /*.header-green table, .header-red table, .header-white table, .header-blue table {
@@ -1113,29 +1084,4 @@ footer p { color: gray; }
 /* Les paragraphes eux occupent tout l'espace, les titres aussi */
 #op_input_container p, #op_input_container h3 {
     flex: 0 0 100%;
-}
-
-/**
-*   Explorateur de fichiers
-*/
-#explorer {
-    font-size: 14px;
-}
-
-#explorer ul {
-	list-style-type: none;
-}
-
-#explorer a, #explorer li {
-	text-decoration: none;
-    padding-top: 3px;
-	padding-bottom: 3px;
-}
-
-#explorer ul {
-	padding-left: 15px;
-}
-
-#explorer span.explorer-file {
-    color:gray;
 }
